--- a/Solver.csproj
+++ b/Solver.csproj
@@ -43,9 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RandomCache.cs" />
+    <Compile Include="RandomSource.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
